--- a/action.yml
+++ b/action.yml
@@ -14,5 +14,5 @@ runs:
   using: 'docker'
   image: 'docker://efrecon/localtunnel'
   args:
-    - --port ${{ inputs.webserver-port }}
-    - --local-host ${{ inputs.webserver-host }}
+    p: ${{ inputs.webserver-port }}
+    l: ${{ inputs.webserver-host }}
